fixed opens